welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: value peindre is not a member of Unit
                            avance()                        																		  peindre()
                                                                                                                                                                                                          ^