welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {
  def peindre(){baisseBrosse();leveBrosse()}
	def peindreColonne(T:Array[Color]){
  for (j<-1 to getMondeHauteur()-1){setCouleurBrosse(T(j))
                                                    																		  peindre()
                                    avance()
              
    
  }
}
  var T = new Array[Color] (getMondeHauteur())
  
  for (i<-1 to getMondeHauteur()-1){
    
  	T(i)=getCouleurSol()
		avance  
   
	}
  T(0)=getCouleurSol()
  val decalage = litMessage().toInt
  for (i<- 1 to decalage){recule}
  
  for (k<- 1 to getMondeLargeur()){
    gauche()
    avance()
    droite()
    peindreColonne(T)
    for (i<- 1 to getMondeHauteur()){recule}
    
  }
  
}